# dll-sandbox

./: .editorconfig  .gitignore  CMakeSettings.json  cmakelists.txt
application/: CMakeLists.txt
application/private/: main.cpp
library1/: CMakeLists.txt
library1/private/: library1_0.cpp
library1/public/lib1/: library1.h  library1_0.h
library2/: CMakeLists.txt
library2/private/: library2_0.cpp
library2/public/lib2/: library2.h  library2_0.h
